@@ -136,7 +136,11 @@ for(int index=0; currentIter.hasNext(); index++) {
 %>
         <tr> <!-- row 1 -->
           <td class='Leaf' width='200'>
-            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamA, teamB)%>
+<%if(currentRound.size() > 2) {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamA, teamB, true)%>
+<%} else {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamA, teamB, false)%>
+<%}%>
           </td>
             
           <!-- connect teamA and teamB -->
@@ -168,8 +172,13 @@ for(int index=0; currentIter.hasNext(); index++) {
           <!-- skip column for A-B bar -->
           <td class='Leaf' width='200'>
 <%if(currentRound.size() > 2) {%>
-            <%=Playoff.getDisplayString(connection, currentTournament, (runNumber+1), winner, null)%>
+  <%if(currentRound.size() > 4) {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, (runNumber+1), winner, null, true)%>
+  <%} else {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, (runNumber+1), winner, null, false)%>
+  <%}%>
 <%} else {%>
+                <!-- don't show winner -->
                 &nbsp;
 <%}%>
           </td>
@@ -204,7 +213,11 @@ for(int index=0; currentIter.hasNext(); index++) {
         
         <tr> <!-- row 5 -->
           <td class='Leaf' width='200'>
-            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamB, teamA)%>
+<%if(currentRound.size() > 2) {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamB, teamA, true)%>
+<%} else {%>
+            <%=Playoff.getDisplayString(connection, currentTournament, runNumber, teamB, teamA, false)%>
+<%}%>
           </td>
           <!-- skip column for A-B bar -->
           <td width='200'>&nbsp;</td>
